--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ body,
 }
 
 @layer components {
+  .project-tag {
+    @apply py-1 rounded-md font-bold text-xs text-gray-lighter mr-2 last:mr-0;
+  }
+
   .lsystem-descriptor-container {
     .section {
       @apply mt-2;
