:lipstick: Improve Navbar design

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,7 @@
   --color-pale-red: #d07869;
   --color-yellow: #f9f871;
   --color-orange: #f9b163;
+  --color-light-orange: #ffc89a;
   --color-white: #ffffff;
 }
 
