:recycle: Use shiki for code blocks syntax highlighting in blog

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,8 +126,8 @@
     @apply pl-2;
   }
 
-  p > code {
-    @apply font-mono text-sm font-semibold;
+  pre > code {
+    @apply font-mono text-sm font-medium;
   }
 
   /* Table of Contents */
